force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para la tarea #29287</description>
    <label>Cobro Fallido</label>
    <nameField>
        <label>Nombre de Transacción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cobros Fallidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>