force-app/main/default/objects/Transaction__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>