force-app/main/default/objects/Transaction__c/fields/Base_imponible__c.field-meta.xml
<CustomField>
    <fullName>Base_imponible__c</fullName>
    <label>Base imponible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>