force-app/main/default/objects/Transaction__c/fields/Card_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Card_expiration_date__c</fullName>
    <label>Fecha de caducidad de tarjeta</label>
    <length>5</length>
    <type>Text</type>
</CustomField>