force-app/main/default/objects/Transaction__c/fields/Contract_LookUp__c.field-meta.xml
<CustomField>
    <fullName>Contract_LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Transacciones</relationshipName>
    <type>Lookup</type>
</CustomField>