force-app/main/default/objects/Transaction__c/fields/Credit_card__c.field-meta.xml
<CustomField>
    <fullName>Credit_card__c</fullName>
    <label>Número de tarjeta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>