force-app/main/default/objects/Transaction__c/fields/Cuenta_LookUp__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Transacciones</relationshipName>
    <type>Lookup</type>
</CustomField>