force-app/main/default/objects/Transaction__c/fields/Estado_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Estado_transaccion__c</fullName>
    <label>Estado de transacción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>