force-app/main/default/objects/Transaction__c/fields/ID_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ID_Campaign__c</fullName>
    <label>ID Campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>