force-app/main/default/objects/Transaction__c/fields/Id_factura__c.field-meta.xml
<CustomField>
    <fullName>Id_factura__c</fullName>
    <label>Número de Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>