force-app/main/default/objects/Transaction__c/fields/ID_Producto__c.field-meta.xml
<CustomField>
    <fullName>ID_Producto__c</fullName>
    <label>ID Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>