force-app/main/default/objects/Transaction__c/fields/ID_transaccion__c.field-meta.xml
<CustomField>
    <fullName>ID_transaccion__c</fullName>
    <label>ID transacción</label>
    <length>80</length>
    <type>Text</type>
</CustomField>