force-app/main/default/objects/Transaction__c/fields/item_description__c.field-meta.xml
<CustomField>
    <fullName>item_description__c</fullName>
    <description>Campo con nombre api no encontrado en la documentación, por lo que se ha decido indicar tal nombre api</description>
    <label>Descripción de producto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>