force-app/main/default/objects/Transaction__c/fields/item_type__c.field-meta.xml
<CustomField>
    <fullName>item_type__c</fullName>
    <label>Tipo de producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>