force-app/main/default/objects/Transaction__c/fields/Metodo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_pago__c</fullName>
    <label>Método de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>