force-app/main/default/objects/Transaction__c/fields/original_billing_date__c.field-meta.xml
<CustomField>
    <fullName>original_billing_date__c</fullName>
    <description>Campo creado tipo fecha y hora debido al nombre documentación de api recibida en string</description>
    <label>Fecha y hora de compra</label>
    <type>DateTime</type>
</CustomField>