force-app/main/default/objects/Transaction__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>Método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>credit_card</fullName>
                <label>Tarjeta de crédito</label>
            </value>
            <value>
                <fullName>paypal</fullName>
                <label>Usuario Paypal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>