force-app/main/default/objects/Transaction__c/fields/Primera_transaccion_recurrente__c.field-meta.xml
<CustomField>
    <fullName>Primera_transaccion_recurrente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verifica si es la primera transaccion recurrente del contrato</description>
    <label>Primera transacción recurrente</label>
    <type>Checkbox</type>
</CustomField>