force-app/main/default/objects/Transaction__c/fields/Producto_contratado__c.field-meta.xml
<CustomField>
    <fullName>Producto_contratado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto contratado</label>
    <referenceTo>Producto_Contrato__c</referenceTo>
    <relationshipName>Transacciones</relationshipName>
    <type>Lookup</type>
</CustomField>