force-app/main/default/objects/Transaction__c/fields/recurrent__c.field-meta.xml
<CustomField>
    <fullName>recurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurrente</label>
    <type>Checkbox</type>
</CustomField>