force-app/main/default/objects/Transaction__c/fields/Tax_percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_percent__c</fullName>
    <label>% Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>