force-app/main/default/objects/Transaction__c/fields/Tipo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_pago__c</fullName>
    <label>Tipo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurrente</fullName>
            </value>
            <value>
                <fullName>Puntual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>