force-app/main/default/objects/Transaction__c/fields/Tipo_de_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_transaccion__c</fullName>
    <label>Tipo de transacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>