force-app/main/default/objects/Transaction__c/fields/Tipo_objeto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_objeto__c</fullName>
    <label>Tipo objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>